--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -91,6 +91,7 @@
   $w50:$width/50 !global;
   $w52:$width/52 !global;
   $w110:$width/110 !global;
+  $w2000:$width/2000 !global;
 }
 
 // Mark some flags as incomplete
