--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,6 +17,7 @@
 @import '_helpers/rectangles';
 @import '_helpers/symbols';
 @import '_helpers/triangles';
+@import '_helpers/stars';
 
 // Flag specific mixins
 @import '_helpers/nordic_cross';
