--- a/app/styles/_flags/grc.scss
+++ b/app/styles/_flags/grc.scss
@@ -13,16 +13,17 @@
   $cross-top: 4 * $unit;
 
   background-image: 
-                    h-stripe($blue,  $stripe-size, 0),
-                    h-stripe($white, $stripe-size, 1 * $stripe-size),
-                    h-stripe($blue,  $stripe-size, 2 * $stripe-size),
-                    h-stripe($white, $stripe-size, 3 * $stripe-size),
-                    h-stripe($blue,  $stripe-size, 4 * $stripe-size),
-                    h-stripe($white, $stripe-size, 5 * $stripe-size),
-                    h-stripe($blue,  $stripe-size, 6 * $stripe-size),
-                    h-stripe($white, $stripe-size, 7 * $stripe-size),
-                    h-stripe($blue,  $stripe-size, 8 * $stripe-size),
-                  ;
+                   lines(
+                     $blue, $stripe-size,
+                     $white, $stripe-size,
+                     $blue, $stripe-size,
+                     $white, $stripe-size,
+                     $blue, $stripe-size,
+                     $white, $stripe-size,
+                     $blue, $stripe-size,
+                     $white, $stripe-size,
+                     $blue, $stripe-size
+                   );
 
   &:before {
     @include square($blue, $canton-size);
