--- a/app/styles/_helpers/lines.scss
+++ b/app/styles/_helpers/lines.scss
@@ -16,9 +16,9 @@
     @if ($i % 2 == 0) {
       $color: nth($args, $i - 1);
       $width: nth($args, $i);
-      $end: round($start + $width);
-      $result: append($result, $color $start, comma);
-      $result: append($result, $color $end, comma);
+      $end: $start + $width;
+      $result: append($result, $color round($start), comma);
+      $result: append($result, $color round($end), comma);
       $start: $end;
     }
   }
@@ -33,7 +33,7 @@
 // @args top: Color of top line
 // @args bottom: Color of bottom line
 @function two-lines($top, $bottom) {
-  @return lines($top, $h2, $bottom, $h2);
+  @return lines($top, 50%, $bottom, 50%);
 }
 @mixin two-lines($top, $bottom) {
   background-image: two-lines($top, $bottom);
@@ -44,7 +44,7 @@
 // @args center: Color of center line
 // @args bottom: Color of bottom line
 @function three-lines($top, $center, $bottom) {
-  @return lines($top, $h3, $center, $h3, $bottom, $h3);
+  @return lines($top, 33.33%, $center, 33.33%, $bottom, 33.33%);
 }
 @mixin three-lines($top, $center, $bottom) {
   background-image: three-lines($top, $center, $bottom);
